--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,9 @@ body {
     font-family: "Century Gothic";
     background: linear-gradient(to bottom, #fddca5, #bbc8ba);
     margin: 0;
-    /*"Berlin Sans FB" "Bahnschrift"*/
 }
 header img {
     position: relative;
-    margin: auto;
-    top: -100px;
     z-index: 0;
     width: 28%;
     border-radius: 50%;
@@ -34,10 +31,8 @@ header div{
     height: 20%;
 }
 article {
-    /*justify-content: center;*/
     width: 100%;
     flex-direction: column;
-    /*flex-wrap: wrap;*/
 }
 .context {
     display: block;
@@ -54,7 +49,6 @@ article {
 }
 h1 {
     color: white;
-    /*text-shadow: aquamarine 4px 4px;*/
 }
 h3 {
     font-size: 20pt;
@@ -79,13 +73,13 @@ ul {
 .name p{
     font-family: "Brush Script MT";
     font-size: 80pt;
-    margin: 0px;
+    margin: 0;
 }
 .line{
-    margin: 0px 0;
+    margin: 0 0;
     padding: 0;
     height: 0;
-    border: none;
+    /*border: none;*/
     border-width: 0 0 5px;
     border-style: solid;
     border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="orange" cx="1" cy="0.5" r="0.5"></circle></svg>') 0 0 100% repeat;
@@ -98,4 +92,18 @@ footer p{
 }
 .marker{
     color: slategrey;
+}
+.footer{
+    display: flex;
+    width: 30%;
+    margin: auto;
+    align-items: center;
+}
+.footer img{
+    height: 20pt;
+}
+.footer div{
+    justify-content: center;
+    margin-right: 20px;
+    margin-left: 20px;
 }
